Ensure all of intro modal content is visible on scroll

--- a/scss/components/introModal.scss
+++ b/scss/components/introModal.scss
@@ -20,9 +20,9 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		height: 100%;
+		min-height: 100%;
 		position: relative;
-		margin: 0 auto;
+		margin: 0 auto 20px auto;
 	}
 
 	.p0 {
@@ -59,7 +59,6 @@
 				height: 391px;	// avoid collapsing while loading image
 			}
 		}
-
 	}
 
 	.p1 {
